--- a/C3/Assembly-CSharp.csproj
+++ b/C3/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\Scripts\Maze Generation\MazeGraph.cs" />
      <Compile Include="Assets\Scripts\Maze Generation\MazeNode.cs" />
      <Compile Include="Assets\Scripts\Maze Generation\Program.cs" />
+     <Compile Include="Assets\Scripts\PauseButton.cs" />
      <Compile Include="Assets\Scripts\PlayerMotion.cs" />
      <Compile Include="Assets\Scripts\StepMotion.cs" />
      <Compile Include="Assets\Scripts\TimeGUI.cs" />
