--- a/C3/Assembly-CSharp.csproj
+++ b/C3/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\EndLevel.cs" />
      <Compile Include="Assets\Scripts\Maze Generation\Instantiation.cs" />
      <Compile Include="Assets\Scripts\Maze Generation\MazeEdge.cs" />
      <Compile Include="Assets\Scripts\Maze Generation\MazeGraph.cs" />
