--- a/C3/Assembly-CSharp.csproj
+++ b/C3/Assembly-CSharp.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\BttnController.cs" />
      <Compile Include="Assets\Scripts\EndLevel.cs" />
+     <Compile Include="Assets\Scripts\GUI\MainMenuGUI.cs" />
+     <Compile Include="Assets\Scripts\GUI\Sliders.cs" />
+     <Compile Include="Assets\Scripts\GUI\TimeGUI.cs" />
      <Compile Include="Assets\Scripts\Maze Generation\Instantiation.cs" />
      <Compile Include="Assets\Scripts\Maze Generation\MazeEdge.cs" />
      <Compile Include="Assets\Scripts\Maze Generation\MazeGraph.cs" />
@@ -55,9 +58,8 @@
      <Compile Include="Assets\Scripts\Maze Generation\Program.cs" />
      <Compile Include="Assets\Scripts\PauseButton.cs" />
      <Compile Include="Assets\Scripts\PlayerMotion.cs" />
-     <Compile Include="Assets\Scripts\Sliders.cs" />
      <Compile Include="Assets\Scripts\StepMotion.cs" />
-     <Compile Include="Assets\Scripts\TimeGUI.cs" />
+     <Compile Include="Assets\Scripts\testyolo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
