Cleaned Marks coloring. Achievements Progress.

--- a/C3/Assembly-CSharp-vs.csproj
+++ b/C3/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\AchievementsController.cs" />
      <Compile Include="Assets\Scripts\EndLevel.cs" />
+     <Compile Include="Assets\Scripts\GUI\AchievementsGUI.cs" />
      <Compile Include="Assets\Scripts\GUI\MainMenuGUI.cs" />
      <Compile Include="Assets\Scripts\GUI\MarksGUI.cs" />
      <Compile Include="Assets\Scripts\GUI\Sliders.cs" />
